Fix bigger calculations overflow and widen the calculator

--- a/src/components/display.css
+++ b/src/components/display.css
@@ -1,12 +1,12 @@
 .display {
   background: #e6ee9c;
   border: 5px solid #ffffff;
+  max-width: 400px;
 }
 
 .display-main {
-  font-size: 2.4em;
   height: 100px;
-  border-bottom: 5px solid #e6ee9c;
+  word-wrap: break-word;
 }
 
 .display-calc {
